openshift/chromadb/service-chromadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: chromadb
spec:
  selector:
    app: chromadb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
