openshift/chromadb/route-chromadb.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chromadb
spec:
  to:
    kind: Service
    name: chromadb
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
